--- a/app/src/main/res/layout/me_add_collect_activity.xml
+++ b/app/src/main/res/layout/me_add_collect_activity.xml
@@ -24,6 +24,17 @@
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:title="个人信息"
             app:titleMarginStart="90dp">
+            <TextView
+                android:id="@+id/me_confirm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginEnd="10dp"
+                android:gravity="center_horizontal"
+                android:clickable="true"
+                android:focusable="true"
+                android:text="确认"
+                />
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
