lx技能详情页

--- a/app/src/main/res/layout/lx_skillpage.xml
+++ b/app/src/main/res/layout/lx_skillpage.xml
@@ -15,7 +15,8 @@
         <ImageView
             android:layout_width="50sp"
             android:layout_height="50sp"
-            android:background="@mipmap/default_avatar400"/>
+            android:background="@mipmap/default_avatar400"
+            android:id="@+id/skillbb"/>
         <TextView
             android:id="@+id/skillTitle"
             android:layout_width="wrap_content"
