--- a/app/src/main/res/layout/me_person_activity.xml
+++ b/app/src/main/res/layout/me_person_activity.xml
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:text="你好呀"
                 />
-            <team.antelope.fg.util.SetRoundImageViewUtil
+            <team.antelope.fg.util.CircleImageViewUtil
                 android:id="@+id/iv_user_head"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
