--- a/app/src/main/res/layout/lx_details_bottom.xml
+++ b/app/src/main/res/layout/lx_details_bottom.xml
@@ -33,6 +33,7 @@
 
 
     <Button
+        android:id="@+id/pay_btn"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_weight="2"
