--- a/app/src/main/res/layout/me_follow_items.xml
+++ b/app/src/main/res/layout/me_follow_items.xml
@@ -8,13 +8,13 @@
         android:id="@+id/tv_index"
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:background="#a1fcb2c9"
         android:gravity="center_vertical"
+        android:background="#6e666666"
         android:paddingLeft="20dp"
+ android:layout_alignParentBottom="true"
         android:text="A"
-        android:textColor="#ffffff"
+        android:textColor="#434141"
         android:textSize="15sp" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
