--- a/app/src/main/res/layout/me_follow_activity.xml
+++ b/app/src/main/res/layout/me_follow_activity.xml
@@ -36,13 +36,19 @@
             <!--android:textColor="#000000"-->
             <!--android:textSize="16sp" />-->
 
-
+        <android.support.v4.widget.SwipeRefreshLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:id="@+id/swipeLayout" >
         <ListView
             android:id="@+id/listView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
         </ListView>
+        </android.support.v4.widget.SwipeRefreshLayout>
         <team.antelope.fg.me.quickindexbar.QuickIndexBar
 
             android:id="@+id/quick_bar"
