--- a/app/src/main/res/layout/activity_person_info.xml
+++ b/app/src/main/res/layout/activity_person_info.xml
@@ -13,6 +13,12 @@
         android:layout_height="match_parent">
     </team.antelope.fg.widght.MyWebView>
     <!--style="?android:attr/webViewStyle"  关键-->
-
+    <!--加载提示的loading图-->
+    <include
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/load_layout"
+        layout="@layout/loading_anim"
+        android:layout_centerInParent="true"/>
 
 </LinearLayout>
