--- a/app/src/main/res/layout/me_person_activity.xml
+++ b/app/src/main/res/layout/me_person_activity.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="team.antelope.fg.me.activity.MePersonActivity"
     >
+
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBar"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-       >
+        android:layout_height="270dp"
+        >
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
@@ -22,27 +21,75 @@
             app:titleEnabled="false"
             >
             <ImageView
+                android:id="@+id/iv_chang"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:clickable="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/background1"
                 app:layout_collapseMode="parallax"
-              />
+                />
 
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_gravity="center"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="50dp"
+                android:textSize="18sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="你好呀"
                 />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="75dp"
+                android:orientation="horizontal"
+                android:layout_gravity="center">
+                <TextView
+                    android:id="@+id/tv_follow"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="关注 "
+                    />
+                <TextView
+                    android:id="@+id/tv_follow_num"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="12"
+                    />
+                <TextView
+                    android:layout_gravity="center"
+                    android:textSize="10sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="  |  "
+                    />
+                <TextView
+                    android:id="@+id/tv_fan"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="粉丝 "
+                    />
+                <TextView
+                    android:id="@+id/tv_fanNum"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="20"
+                    />
+            </LinearLayout>
+
             <team.antelope.fg.util.CircleImageViewUtil
                 android:id="@+id/iv_user_head"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
-                android:layout_marginBottom="30dp"
                 android:layout_gravity="center"
+                android:layout_marginBottom="10dp"
+                android:clickable="true"
+                android:focusable="true"
                 android:src="@drawable/me_user_head1"
                 />
             <LinearLayout
@@ -50,12 +97,16 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:background="@color/me_item1"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <LinearLayout
+                    android:id="@+id/layout_moments"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:clickable="true"
+                    android:focusable="true"
                     android:orientation="vertical">
 
                     <TextView
@@ -77,32 +128,6 @@
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/layout_follow"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="关注"
-                        android:textSize="20sp" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="8"
-                        android:textSize="20sp" />
-
-                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/layout_fans"
@@ -112,6 +137,7 @@
                     android:clickable="true"
                     android:focusable="true"
                     android:orientation="vertical">
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -119,14 +145,9 @@
                         android:gravity="center"
                         android:text="粉丝"
                         android:textSize="20sp" />
-                    <TextView
-                        android:id="@+id/tv_fanNum"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="2"
-                        android:textSize="20sp" />
+
+
+
                 </LinearLayout>
             </LinearLayout>
             <android.support.v7.widget.Toolbar
@@ -134,59 +155,109 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
-                app:navigationIcon="@mipmap/icon_back"
                 app:layout_scrollFlags="scroll|enterAlways|snap"
+                app:navigationIcon="@mipmap/icon_back"
                 >
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
-<android.support.v4.widget.NestedScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    >
-    <LinearLayout
-        android:orientation="vertical"
+
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/background1"
-       >
-        <TextView
-            android:id="@+id/tv_sex"
-            style="@style/TxtTitle"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="10dp"
-            android:background="@drawable/setting_item2_selector"
-            android:clickable="true"
-            android:gravity="center"
-            android:text="男"
-            android:textSize="20sp" />
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        >
 
-        <TextView
-            android:id="@+id/tv_age"
-            style="@style/TxtTitle"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="10dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/background1"
 
-            android:background="@drawable/setting_item2_selector"
-            android:clickable="true"
-            android:gravity="center"
-            android:text="18"
-            android:textSize="20sp" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_email"
-            style="@style/TxtTitle"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="10dp"
-            android:background="@drawable/setting_item2_selector"
-            android:clickable="true"
-            android:gravity="center"
-            android:text="chizhaji@gmail.com"
-            android:textSize="20sp" />
-    </LinearLayout>
-</android.support.v4.widget.NestedScrollView>
+            <TextView
+                android:id="@+id/tv_sex"
+                style="@style/TxtTitle"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:background="@drawable/setting_item2_selector"
+                android:clickable="true"
+                android:gravity="center"
+                android:visibility="gone"
+                android:text="男"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/tv_age"
+                style="@style/TxtTitle"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:visibility="gone"
+                android:background="@drawable/setting_item2_selector"
+                android:clickable="true"
+                android:gravity="center"
+                android:text="18"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/tv_email"
+                style="@style/TxtTitle"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:background="@drawable/setting_item2_selector"
+                android:clickable="true"
+                android:gravity="center"
+                android:visibility="gone"
+                android:text="chizhaji@gmail.com"
+                android:textSize="20sp" />
+            <!-- tab start-->
+            <com.ogaclejapan.smarttablayout.SmartTabLayout
+                android:id="@+id/ly_vp_tab"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                app:stl_indicatorAlwaysInCenter="false"
+                app:stl_indicatorWithoutPadding="false"
+                app:stl_indicatorInFront="false"
+                app:stl_indicatorInterpolation="smart"
+                app:stl_indicatorGravity="bottom"
+                app:stl_indicatorColor="#c66279"
+                app:stl_indicatorThickness="1dp"
+                app:stl_indicatorWidth="auto"
+                app:stl_indicatorCornerRadius="2dp"
+                app:stl_overlineColor="#c66279"
+                app:stl_overlineThickness="0dp"
+                app:stl_underlineColor="#c66279"
+                app:stl_underlineThickness="0dp"
+                app:stl_dividerColor="#c66279"
+                app:stl_dividerThickness="0dp"
+                app:stl_defaultTabBackground="?attr/selectableItemBackground"
+                app:stl_defaultTabTextAllCaps="true"
+                app:stl_defaultTabTextColor="#fcffffff"
+                app:stl_defaultTabTextSize="12sp"
+                app:stl_defaultTabTextHorizontalPadding="16dp"
+                app:stl_defaultTabTextMinWidth="150dp"
+                app:stl_distributeEvenly="true"
+                app:stl_clickable="true"
+                app:stl_titleOffset="auto_center"
+                app:stl_drawDecorationAfterTab="false"
+                android:layout_gravity="center"
+                />
+            <android.support.v4.view.ViewPager
+                android:id="@+id/vp_profile"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:flipInterval="30"
+                android:persistentDrawingCache="animation" />
+
+            <!-- tab end-->
+
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
+
+
 </android.support.design.widget.CoordinatorLayout>
