--- a/app/src/main/res/layout/me_profile_activity.xml
+++ b/app/src/main/res/layout/me_profile_activity.xml
@@ -9,7 +9,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBar"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="270dp"
         >
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
@@ -33,17 +33,72 @@
             <TextView
                 android:id="@+id/tv_set_name"
                 android:layout_gravity="center"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="50dp"
+                android:textSize="18sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="你好呀"
                 />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="75dp"
+                android:orientation="horizontal"
+                android:layout_gravity="center">
+                <TextView
+                    android:id="@+id/tv_follow"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="关注 "
+                    />
+                <TextView
+                    android:id="@+id/tv_follow_num"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="12"
+                    />
+                <TextView
+                    android:layout_gravity="center"
+                    android:textSize="10sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="  |  "
+                    />
+                <TextView
+                    android:id="@+id/tv_fan"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="粉丝 "
+                    />
+                <TextView
+                    android:id="@+id/tv_fanNum"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="20"
+                    />
+            </LinearLayout>
+            <TextView
+                android:id="@+id/tv_change"
+                style="@style/TxtTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="100dp"
+                android:background="@drawable/setting_item2_selector"
+                android:drawableStart="@drawable/ic_border_color_white_18dp"
+                android:clickable="true"
+                android:gravity="center"
+                android:textSize="12sp" />
             <team.antelope.fg.util.CircleImageViewUtil
                 android:id="@+id/iv_user_head"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
-                android:layout_marginBottom="30dp"
                 android:layout_gravity="center"
+                android:layout_marginBottom="10dp"
                 android:clickable="true"
                 android:focusable="true"
                 android:src="@drawable/me_user_head1"
@@ -53,7 +108,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:background="@color/me_item1"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <LinearLayout
                     android:id="@+id/layout_moments"
@@ -101,14 +157,7 @@
                         android:text="粉丝"
                         android:textSize="20sp" />
 
-                    <TextView
-                        android:id="@+id/tv_fanNum"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="2"
-                        android:textSize="20sp" />
+
 
                 </LinearLayout>
             </LinearLayout>
@@ -134,6 +183,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/background1"
+
             android:orientation="vertical">
 
             <TextView
@@ -145,6 +195,7 @@
                 android:background="@drawable/setting_item2_selector"
                 android:clickable="true"
                 android:gravity="center"
+                android:visibility="gone"
                 android:text="男"
                 android:textSize="20sp" />
 
@@ -154,7 +205,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
-
+                android:visibility="gone"
                 android:background="@drawable/setting_item2_selector"
                 android:clickable="true"
                 android:gravity="center"
@@ -170,9 +221,50 @@
                 android:background="@drawable/setting_item2_selector"
                 android:clickable="true"
                 android:gravity="center"
+                android:visibility="gone"
                 android:text="chizhaji@gmail.com"
                 android:textSize="20sp" />
+            <!-- tab start-->
+            <com.ogaclejapan.smarttablayout.SmartTabLayout
+                android:id="@+id/ly_vp_tab"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                app:stl_indicatorAlwaysInCenter="false"
+                app:stl_indicatorWithoutPadding="false"
+                app:stl_indicatorInFront="false"
+                app:stl_indicatorInterpolation="smart"
+                app:stl_indicatorGravity="bottom"
+                app:stl_indicatorColor="#c66279"
+                app:stl_indicatorThickness="1dp"
+                app:stl_indicatorWidth="auto"
+                app:stl_indicatorCornerRadius="2dp"
+                app:stl_overlineColor="#c66279"
+                app:stl_overlineThickness="0dp"
+                app:stl_underlineColor="#c66279"
+                app:stl_underlineThickness="0dp"
+                app:stl_dividerColor="#c66279"
+                app:stl_dividerThickness="0dp"
+                app:stl_defaultTabBackground="?attr/selectableItemBackground"
+                app:stl_defaultTabTextAllCaps="true"
+                app:stl_defaultTabTextColor="#fcffffff"
+                app:stl_defaultTabTextSize="12sp"
+                app:stl_defaultTabTextHorizontalPadding="16dp"
+                app:stl_defaultTabTextMinWidth="150dp"
+                app:stl_distributeEvenly="true"
+                app:stl_clickable="true"
+                app:stl_titleOffset="auto_center"
+                app:stl_drawDecorationAfterTab="false"
+                android:layout_gravity="center"
+                />
+            <android.support.v4.view.ViewPager
+                android:id="@+id/vp_profile"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:flipInterval="30"
+                android:persistentDrawingCache="animation" />
 
+            <!-- tab end-->
 
         </LinearLayout>
 
