--- a/app/src/main/res/layout/lx_details_bottom.xml
+++ b/app/src/main/res/layout/lx_details_bottom.xml
@@ -18,6 +18,7 @@
         android:textSize="10sp" />
 
     <Button
+        android:id="@+id/collectskill"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="48dp"
