--- a/app/src/main/res/layout/me_moment_fragment.xml
+++ b/app/src/main/res/layout/me_moment_fragment.xml
@@ -5,9 +5,14 @@
     android:orientation="vertical"
     tools:context="team.antelope.fg.me.fragment.MeMomentFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="暂无动态" />
 
+
+
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </ListView>
 </LinearLayout>
