--- a/app/src/main/res/layout/me_fanfollow_item.xml
+++ b/app/src/main/res/layout/me_fanfollow_item.xml
@@ -10,7 +10,13 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         />
-
+    <TextView
+        android:id="@+id/fans_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:text="1"
+        />
     <TextView
         android:id="@+id/fans_name"
         android:layout_width="match_parent"
@@ -21,10 +27,6 @@
         android:gravity="center_vertical"
         android:textColor="@color/black"
         android:text="我叫" />
-    <TextView
-        android:id="@+id/fans_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"/>
+
 </LinearLayout>
 
