--- a/app/src/main/res/layout/me_fragment_layout.xml
+++ b/app/src/main/res/layout/me_fragment_layout.xml
@@ -106,7 +106,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/me_making"
+                    android:id="@+id/me_skill"
                     style="@style/TxtTitle"
                     android:layout_width="match_parent"
                     android:layout_height="85dp"
@@ -141,7 +141,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="3.0dip" />
 
+                <TextView
+
+                    android:id="@+id/tv_order"
+                    style="@style/TxtTitle"
+                    android:layout_width="fill_parent"
+                    android:layout_height="45dp"
+                    android:background="@drawable/setting_item2_selector"
+                    android:clickable="true"
+                    android:drawableEnd="@mipmap/ic_chevron_right_white_24dp"
+                    android:drawablePadding="10dp"
+                    android:drawableStart="@mipmap/ic_style_white_24dp"
+                    android:focusable="true"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:text="我的订单"
+                    android:textSize="16sp" />
                 <View
                     android:layout_width="fill_parent"
                     android:layout_height="3.0dip" />
