--- a/app/src/main/res/values/publish_strings.xml
+++ b/app/src/main/res/values/publish_strings.xml
@@ -21,4 +21,13 @@
     <string name="hour">时</string>
     <string name="minute">分</string>
 
+    <!-- 下拉刷新要用到的string -->
+    <string name="publish_pull_to_refresh">下拉可以刷新</string>
+    <string name="publish_release_to_refresh">释放立即刷新</string>
+    <string name="publish_refreshing">正在刷新…</string>
+    <string name="publish_not_updated_yet">暂未更新过</string>
+    <string name="publish_updated_at">上次更新于%1$s前</string>
+    <string name="publish_updated_just_now">刚刚更新</string>
+    <string name="publish_time_error">时间有问题</string>
+
 </resources>
