--- a/app/src/main/res/layout/me_fragment_layout.xml
+++ b/app/src/main/res/layout/me_fragment_layout.xml
@@ -181,7 +181,7 @@
                     android:gravity="center_vertical"
                     android:paddingLeft="16dp"
                     android:paddingRight="16dp"
-                    android:text="代付款订单"
+                    android:text="待付款订单"
                     android:textSize="16sp" />
                 <View
                     android:layout_width="fill_parent"
