--- a/app/src/main/res/layout/lx_activity_orders.xml
+++ b/app/src/main/res/layout/lx_activity_orders.xml
@@ -26,11 +26,19 @@
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_order"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/orderRecyclerView1">
-    </android.support.v7.widget.RecyclerView>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        >
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/orderRecyclerView1">
+        </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 </LinearLayout>
 
 
