--- a/app/src/main/res/layout/lx_orderitem.xml
+++ b/app/src/main/res/layout/lx_orderitem.xml
@@ -57,11 +57,39 @@
                 android:layout_gravity="center_vertical"/>
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="42dp"
                 android:id="@+id/orderskillcontent"
                 android:text="1111111111111"
-                android:textSize="14dp"
+                android:textSize="12dp"
                 android:layout_gravity="center_vertical"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.3dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="3dp"
+                android:background="#aba6a6"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16dp"
+                    android:layout_gravity="center_vertical"
+                    android:text="价格(元)："
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#df3232"
+                    android:textSize="16dp"
+                    android:id="@+id/ordersskillprice"
+                    android:layout_gravity="center_vertical"
+                    android:text="SkillPrice"
+                />
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
