--- a/app/src/main/res/layout/lx_ordersdetails.xml
+++ b/app/src/main/res/layout/lx_ordersdetails.xml
@@ -126,6 +126,29 @@
             android:layout_marginRight="16dp"
             android:layout_marginTop="6dp"
             android:background="#DBDBDB"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_marginLeft="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="总金额(元)："
+                android:textSize="16dp"
+                android:layout_gravity="center_vertical"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/orderDetails_orderPrice"
+                android:text="0.2"
+                android:textColor="#df1111"
+                android:textSize="16dp"
+                android:layout_gravity="center_vertical"/>
+        </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
